setting up behat

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "midtrans/midtrans-php": "^2.6"
     },
     "require-dev": {
+        "behat/behat": "^3.29",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
