--- a/behat.yml
+++ b/behat.yml
@@ -2,7 +2,8 @@ default:
   suites:
     default:
       contexts:
-        - AuthenticatonContext
+        - AuthenticationContext
+        - PemilikContext
   extensions:
     Behat\MinkExtension:
       base_url: "http://127.0.0.1:8000"
