--- a/behat.yml
+++ b/behat.yml
@@ -4,6 +4,7 @@ default:
       contexts:
         - AuthenticationContext
         - PemilikContext
+        - PenghuniContext
   extensions:
     Behat\MinkExtension:
       base_url: "http://127.0.0.1:8000"
