progress on AdminContext automated UAT

--- a/behat.yml
+++ b/behat.yml
@@ -5,6 +5,7 @@ default:
         - AuthenticationContext
         - PemilikContext
         - PenghuniContext
+        - AdminContext
   extensions:
     Behat\MinkExtension:
       base_url: "http://127.0.0.1:8000"
